---
source: tests/snapshot.rs
assertion_line: 113
expression: run_result.output

---
(HOST) INFO  flashing program (2 pages / 8.00 KiB)
(HOST) INFO  success!
────────────────────────────────────────────────────────────────────────────────
Hello, world!
────────────────────────────────────────────────────────────────────────────────
stack backtrace:
   0: lib::inline::__bkpt
        at ./asm/inline.rs:14:5
   1: __bkpt
        at ./asm/lib.rs:51:17
   2: app::exit
        at /tmp/app/src/lib.rs:17:5
   3: hello::__cortex_m_rt_main
        at /tmp/app/src/bin/hello.rs:10:5
   4: main
        at /tmp/app/src/bin/hello.rs:6:1
   5: Reset
(HOST) INFO  device halted without error

